# endurance

./: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: uv-ci.yml
apps/dummy-app/: main.py  pyproject.toml
docs/scripts/: generate_pages.py
experiments/acceleration/: amp.py  baseline_fp32.py  checkpointing.py  common.py  fsdp.py
experiments/cupy/: subsampling.py
experiments/hetgpy/: 1d_homoscedatic.py  nd_homoscedastic.py
experiments/lora/: mlp.py
experiments/mnist/: mnist_cnn.py  mnist_cnn_ddp.py
experiments/parallelism/: experiment_ddp.py  experiment_dtensor.py
experiments/physics-nemo-examples/: darcy.py
experiments/physics-nemo-examples/domino/: config.yaml  run.py
experiments/physics-nemo-examples/figconvnet/: run.py
experiments/physics-nemo-examples/mgn/: run.py  train.py
experiments/the_well/: fno.py  tutorial.py
experiments/torch-pinn/: burgers.py
libs/dummy-lib/: pyproject.toml
libs/dummy-lib/src/dummy_lib/: __init__.py
libs/mini-neural-operators/: pyproject.toml
libs/mini-neural-operators/src/mini_neural_operators/: __init__.py
libs/mini-neural-operators/src/mini_neural_operators/fourier_neural_operators/: fno.py  spectral_convolutions.py
libs/mini-nn/: pyproject.toml
libs/mini-nn/src/mini_nn/: __init__.py  resnet_cnn.py
libs/mini-rnn/: pyproject.toml  train.py
libs/mini-rnn/conf/: config.yaml
libs/mini-rnn/src/mini_rnn/: __init__.py
libs/mini-rnn/src/mini_rnn/layers/: __init__.py  gru.py  lstm.py  rnn.py
libs/mini-rnn/src/mini_rnn/models/: base.py  gru.py  lstm.py  rnn.py
libs/mini-torch-mcmc/: pyproject.toml
libs/mini-torch-mcmc/src/mini_torch_mcmc/: __init__.py  diffusions.py
libs/mini-transformers/: pyproject.toml
libs/mini-transformers/src/mini_transformers/: __init__.py  attention.py  blocks.py
src/endurance/: __init__.py
tests/: test_dummy.py
